[package]
name = "simple-redis"
version = "0.1.0"
authors = ["Eric Shaw <taoiaox@gmail.com>"]
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
bytes = "1.9.0"
enum_dispatch = "0.3.13"
thiserror = "2.0.4"
